--- a/10-ProductosApp/package.json
+++ b/10-ProductosApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RutasApp",
+  "name": "ProductosApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,16 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.14.1",
-    "react-native-maps": "^1.10.0",
-    "react-native-permissions": "^4.1.0",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
